[tool.poetry]
name = "river"
version = "0.1.0"
description = ""
authors = ["Dan Lindeman <lindemda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-river = "^3.3.0"
six = "^1.15.0"
river-admin = "^0.7.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
flake8 = "^3.9.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
